# demonstrate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: full.rs
src/: block.rs  generate.rs  inherit.rs  lib.rs
