[package]
name = "demonstrate"
description = "Declarative testing framework"
repository = "https://github.com/austinsheep/demonstrate"
categories = ["development-tools::testing"]
version = "0.3.1-alpha.0"
authors = ["Austin Baugh <austinsbaugh@gmail.com>"]
documentation = "https://docs.rs/demonstrate"
edition = "2018"
license = "MIT"
readme = "README.md"

[dev-dependencies]
async-attributes = "1.1"
async-std = "1.6"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc_macro = true
